2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_label): No-parent case was not considered.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_label): Use the error location
	of the parent node, if the node does not have one.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: The ID of the list is now given as an argument.

	* cc.cgi: List of document errors now also expanded by source
	code fragment generated by scripting.
	(get_error_label): Use line/column information from the error
	context node, if any.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Line break treatment was different from
	that of HTML and CSS parsers.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: Unquote U+hhhh escapes.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_label): Use token's line and column
	if available.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: Character was not marked if the line
	is less than 50 characters.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Link to the script added.

	* cc-style.css (mark): Added.

	* cc-script.js: New script.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: |value| should be output in |dt| in Parse Errors
	section.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Support for level-i (informational).

	* cc-style.css: New style rules for informational messages added.

	* error-description-source.xml (#information, #level-i): Added.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: In CSS mode, add 'u' error for 'structure' category (until
	it is actually implemented).  Support for '-moz-pre-wrap'.
	Typo in 'collapse' value fixed.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: |text/css| support.  |id_prefix| support was
	partially broken.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Subdocument validation framework implemented.

2008-02-10  Wakaba  <wakaba@suika.fam.cx>
